--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cross-env": "^5.1",
     "jquery": "^3.2",
     "laravel-mix": "^4.0.7",
+    "mixitup": "^3.3.1",
     "popper.js": "^1.12",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.15.2",
